@@ -79,8 +79,11 @@ public:
 
 	bool first();
 
+	std::istream * getBlob(unsigned int columnIndex) const;
+	std::istream * getBlob(const std::string& columnLabel) const;
+
 	bool getBoolean(unsigned int columnIndex) const;
-	bool getBoolean(const std::string& columnLabel)  const;
+	bool getBoolean(const std::string& columnLabel) const;
 
 	int getConcurrency();
 
