@@ -20,6 +20,8 @@ Beta  1.0.3 - 2009-xx-xx
   where we can just copy data, if buffered result set, or stream, if we implement
   it. (Andrey)
 
+- Implemented ResultSet::getBlob() which returns std::stream. (Andrey)
+
 Alpha  1.0.2 - 2008-12-19
 
 - Adding test/unit as a basis for general unit tests based on the new
